; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/oleacc/extr_main.c_convert_child_id.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/oleacc/extr_main.c_convert_child_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [37 x i8] c"unhandled child ID variant type: %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @convert_child_id(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = call i32 @V_VT(i32* %4)
  switch i32 %5, label %9 [
    i32 128, label %6
  ]

6:                                                ; preds = %1
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @V_I4(i32* %7)
  store i32 %8, i32* %2, align 4
  br label %13

9:                                                ; preds = %1
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @V_VT(i32* %10)
  %12 = call i32 @FIXME(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i32 %11)
  store i32 -1, i32* %2, align 4
  br label %13

13:                                               ; preds = %9, %6
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}

declare dso_local i32 @V_VT(i32*) #1

declare dso_local i32 @V_I4(i32*) #1

declare dso_local i32 @FIXME(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
